[gd_scene load_steps=5 format=3 uid="uid://c5dh1yoyfrvr"]

[ext_resource type="Script" path="res://assets/gui/hotbar.gd" id="1_fvm14"]
[ext_resource type="Texture2D" uid="uid://dud0u50bllnay" path="res://assets/loot/weapons/crossbow.png" id="2_mkacq"]
[ext_resource type="Texture2D" uid="uid://i7uce1oi7yf" path="res://assets/loot/weapons/empty.png" id="3_7gfiy"]
[ext_resource type="Texture2D" uid="uid://ch53uonxhtli2" path="res://assets/gui/icons/current.png" id="4_8hc84"]

[node name="hotbar" type="Node2D"]
script = ExtResource("1_fvm14")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 128.0
offset_bottom = 16.0

[node name="slot1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_mkacq")
stretch_mode = 2

[node name="slot2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_7gfiy")
stretch_mode = 2

[node name="slot3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_7gfiy")
stretch_mode = 2

[node name="slot4" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_7gfiy")
stretch_mode = 2

[node name="slot5" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_7gfiy")
stretch_mode = 2

[node name="slot6" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_7gfiy")
stretch_mode = 2

[node name="slot7" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_7gfiy")
stretch_mode = 2

[node name="slot8" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_7gfiy")
stretch_mode = 2

[node name="current" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.25098)
texture = ExtResource("4_8hc84")
centered = false
